# Master_thesis

./: DefaultConfiguration.yaml  SCVP_data_generation.sln  SCVP_data_generation.vcxproj  SCVP_data_generation.vcxproj.filters  main.cpp
3d_models/: Pipe-band.pcd
SCVP-Simulation-main/VP_simulation_system/VP_simulation/: Share_Data.hpp  View_Space.hpp  main.cpp
SCVP_data_generation/: datagenerator.bat
SCVP_data_generation/Debug/: vc142.idb
SCVP_data_generation/Debug/SCVP_dat.05cf041c.tlog/: CL.command.1.tlog  CL.read.1.tlog  CL.write.1.tlog  SCVP_data_generation.lastbuildstate
sometools/: DefaultConfiguration.yaml  convert.bat  move_files.bat  read_binary.py  unzip_all.bat  zip_folder.py
sometools/mesh_sampling/: CMakeLists.txt
sometools/obj2pcd/: CMakeLists.txt
sometools/ply2pcd/: CMakeLists.txt
